 - Allow checkers to have different module names than checker names.
 - Change flake8 checker to obey [flake8] section of tox.ini
 - Fix bug when missing a tox.ini file.

0.8
===

 - Optionally pass extra parameters to checkers
 - Checker controlled defaults

0.7
===

 - Python3 compatible.

0.6
===

 - Easy addition of new checkers.

0.5
===

 - python3 syntax checker added.

0.4
===

 - Initial working version.