@@ -1,3 +1,6 @@
+ - Delete all captainhook checkers before installing.
+ - Don't write pyc files in checkers.
+ - Print version on install
  - Allow checkers to have different module names than checker names.
  - Change flake8 checker to obey [flake8] section of tox.ini
  - Fix bug when missing a tox.ini file.
